--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@ a:active {
 <body>
 <div class="center">
 <a href="form.php">Fill out survey</a><br><br>
-<a href="surveyresults.php">View survey results</a>
+<a href="calculations.php">View survey results</a>
 </div>
 </body>
 
